--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ section {
     background: #000000;
     overflow: hidden;
 }
+h1{
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 100px;
+}
 
 section .wave {
     position: absolute;
